Update Activity1.java